@@ -1,3 +1,9 @@
+[B]1.2.0[/B]
+Rodnoe API v1 is used
+Fixed problem with timezones
+Auto detection timezone feature
+Removed some deprecated in v11 code
+
 [B]1.1.3[/B]
 Current playing video info auto-disapearing
 
